Aula3.1 Meu Portfólio Web - 05

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 id="topo"> MEU PORTFÓLIO WEB </h1>
     <h2> André Horman de Medeiros Correia </h2>
-    <img src="/Imagens/EU.jpg" alt="Foto de André Horman" width="200px">
+    <img src="/ANDREHORMAN1994.github.io/EU.jpg" alt=" Foto de André Horman" width="200px">
     <br>
     <em> Foto tirada em Campina Grande - PB </em>
     <br>
@@ -31,7 +31,8 @@
     </ul>
     <hr>
     <h4>
-        <em> <strong> <a href="/Imagens/EU.jpg"> Aqui se Encontra minha Foto de Perfil </a> </strong> </em>
+        <em> <strong> <a href="/ANDREHORMAN1994.github.io/EU.jpg"> Aqui se Encontra minha Foto de Perfil </a> </strong>
+        </em>
         <br>
         <em> <strong> <a target="_blank" href="https://github.com/ANDREHORMAN1994"> Clique para ver meu GitHub </a>
             </strong> </em>
@@ -44,4 +45,4 @@
     <h2> <a href="#topo"> VOLTAR AO TOPO </a> </h2>
 </body>
 
-</html>hello world
+</html>
