--- a/index.html
+++ b/index.html
@@ -3,46 +3,112 @@
 
 <head>
     <meta charset="utf-8">
-    <title> MEU PORTFÓLIO WEB </title>
+    <!-- TÍTULO DA PÁGINA -->
+    <title>MEU PRIMEIRO HTML</title>
+    <link rel="stylesheet" type="text/css" href="/home/andrehorman/TRYBE/ANDREHORMAN1994.github.io/meuPerfil.css">
 </head>
+<!-- MEU CSS TERMINA DENTRO DA MINHA HEAD, POIS FAZ PARTE DAS MINHAS CONFIGURAÇÕES -->
 
 <body>
-    <h1 id="topo"> MEU PORTFÓLIO WEB </h1>
-    <h2> André Horman de Medeiros Correia </h2>
-    <img src="/ANDREHORMAN1994.github.io/EU.jpg" alt=" Foto de André Horman" width="200px">
-    <br>
-    <em> Foto tirada em Campina Grande - PB </em>
-    <br>
-    <p> Tenho 25 anos, natural de Itabaiana-PB, estou morando atualmente em João Pessoa-PB, tenho graduação em Bacharel
-        de Ciências Contábeis pela UEPB. <br>
-        Entretanto, devido há uma falta de interesse profissional pela área, decidi me reinventar e buscar uma nova área
-        de atuação, o que me levou finalmente a encontrar a <strong>TRYBE</strong>. <br>
-        <br>
-        <strong> <em> Agora sou estudante de Desenvolvimento Web - Full Stack. </em> </strong>
-    </p>
-    <hr>
-    <h3> Minhas Habilidades Profissionais </h3>
-    <ul>
-        <li> Inglês Intermedirário - Curso pela Up Time; </li>
-        <li> Designer Gráfico - Curso pela Gracom; </li>
-        <li> Domínio das ferrametas tradicionais de edição da Adobe;
-        <li> Editor AudioVisual, criação de vinhetas e animação Motion Design </li>
-        <li> Estudante Dev - Full Stack | TRYBE
-    </ul>
-    <hr>
-    <h4>
-        <em> <strong> <a href="/ANDREHORMAN1994.github.io/EU.jpg"> Aqui se Encontra minha Foto de Perfil </a> </strong>
-        </em>
-        <br>
-        <em> <strong> <a target="_blank" href="https://github.com/ANDREHORMAN1994"> Clique para ver meu GitHub </a>
-            </strong> </em>
-        <br>
-        <em> <strong> <a target="_blank" href="https://www.linkedin.com/in/andrehorman/"> Clique para ver meu Linkedin
-                </a> </strong> </em>
-        <br>
-    </h4>
-    <hr>
-    <h2> <a href="#topo"> VOLTAR AO TOPO </a> </h2>
+    <!-- CORPO DA MINHA PÁGINA, CONTÉM HTML E JS -->
+    <div id="meucorpohtml">
+        <h1 id="topo">TRYBE</h1>
+
+        <div class="grupo1">
+            <h3> MEU PORTFÓLIO WEB </h3>
+
+            <a href="#obs" id="botao1"> MINHAS SKILLS </a>
+
+            <img src="/assets/EU.jpg" alt="Este sou eu"> 
+            
+
+            <span id="quemsoueu">
+                <h1> QUEM SOU EU? </h1>
+            </span>
+
+            <span class="apresentacao-inicial">
+                <div class="hello">
+                    <p> <em> Hello_World!! </em>
+                </div>
+
+                <em>Meu nome é <strong>André Horman de Medeiros Correia</strong></em>, tenho 25 anos, graduado em
+                ciências contábeis, itabaianense, atualmente morando em <strong>João Pessoa-PB</strong>. <br>
+                Vivo de nerdices, alto consumidor da indústria do <strong><em>Cinema, Animes, Livros e
+                        Quadrinhos</em></strong>, são meus vícios. E agora ganhei mais uma paixão,
+                <strong>"Programar"</strong>, decidi me reinventar e buscar uma nova área de atuação, o que me levou
+                finalmente a encontrar a <strong>TRYBE!</strong> "Ampliar Imagem Aqui"
+
+                <div class="estudante-dev">Sou estudante Dev Web - Full Stack | <strong> <em>TRYBE</em> </strong> <br>
+                    Aluno <strong>Trybe</strong> | <em>Turma 07 - Faca e Queijo !!</em> </p>
+                </div>
+
+                </p>
+            </span>
+        </div>
+
+        <h1 class="redes"> REDES SOCIAIS </h1>
+
+        <a class="meus-links-redes" id="github" target="_blank" href="https://github.com/ANDREHORMAN1994"> ACESSE MEU
+            GITHUB
+        </a>
+
+        <a class="meus-links-redes2" target="_blank" href="https://www.linkedin.com/in/andrehorman/"> ACESSE MEU
+            LINKEDIN
+        </a>
+
+        <div class="grupo3">
+
+            <div class="componentes">
+                <h2>
+                    <spam id="hard-skills"> HARD SKILLS </spam>
+                </h2>
+                <ul class="lista"> <strong>
+                        <li> INGLÊS INTERMEDIÁRIO; </li>
+                        <li> ESPANHOL BÁSICO; </li>
+                        <li> GIT E GITHUB; </li>
+                        <li> HTML; </li>
+                        <li> CSS; </li>
+                        <li> JAVASCRIPT;</li>
+                        <li> UNIX E SHELL; </li>
+                        <li> SHELLSCRIPT; </li>
+                        <li> POTOSHOP; </li>
+                        <li> ILLUSTRATOR; </li>
+                        <li> INDESIGN; </li>
+                        <li> PREMIERE; </li>
+                        <li> AFTER EFFECTS; </li>
+                        <li> PACOTE OFFICE; </li>
+                        <li> WINDOWS; </li>
+                    </strong>
+                </ul>
+            </div>
+
+            <div class="observacoes-importantes">
+                <h2 id="obs"> <span id="soft-skills"> SOFT SKILLS </span></h2>
+                <ol class="lista"> <strong>
+                        <li> CAPACIDADE DE APRENDIZADO, APRENDER A APRENDER </li>
+                        <li> MANTER CALMA EM MOMENTOS DE CONFLITOS </li>
+                        <li> CAPACIDADE PARA PESQUISAR </li>
+                        <li> SOLUCIONAR PROBLEMAS </li>
+                        <li> CAPACIDADE DE GERENCIAR MINHAS OBRIGAÇÕES </li>
+                        <li> CAPACIDADE DE ORGANIZAÇÃO </li>
+                        <li> BOA COMUNICAÇÃO E TRANSPARÊNCIA </li>
+                        <li> TRABALHAR EM EQUIPE </li>
+                        <li> COLABORAÇÃO SOCIAL </li>
+                        <li> DÁ FEEDBACKS </li>
+                    </strong>
+                </ol>
+            </div>
+
+        </div>
+        <h4 class="referencia"> <em>“Código limpo é aquele escrito por alguém que se preocupa”</em> <span
+                id="citacao-autor">- Michael Feathers</span> </h4>
+
+        <div >
+            <h3> <a href="#topo" id="botao2">VOLTAR AO TOPO</a> </h3>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
