--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <!-- TÍTULO DA PÁGINA -->
     <title>MEU PRIMEIRO HTML</title>
-    <link rel="stylesheet" type="text/css" href="/home/andrehorman/TRYBE/ANDREHORMAN1994.github.io/meuPerfil.css">
+    <link rel="stylesheet" type="text/css" href="/meuPerfil.css">
 </head>
 <!-- MEU CSS TERMINA DENTRO DA MINHA HEAD, POIS FAZ PARTE DAS MINHAS CONFIGURAÇÕES -->
 
@@ -20,7 +20,7 @@
             <a href="#obs" id="botao1"> MINHAS SKILLS </a>
 
             <img src="/assets/EU.jpg" alt="Este sou eu"> 
-            
+           <a href="/assets/EU.jpg"> <span id="legenda">"Ampliar Imagem Aqui"</span> </a>
 
             <span id="quemsoueu">
                 <h1> QUEM SOU EU? </h1>
@@ -36,7 +36,7 @@
                 Vivo de nerdices, alto consumidor da indústria do <strong><em>Cinema, Animes, Livros e
                         Quadrinhos</em></strong>, são meus vícios. E agora ganhei mais uma paixão,
                 <strong>"Programar"</strong>, decidi me reinventar e buscar uma nova área de atuação, o que me levou
-                finalmente a encontrar a <strong>TRYBE!</strong> "Ampliar Imagem Aqui"
+                finalmente a encontrar a <strong>TRYBE!</strong>
 
                 <div class="estudante-dev">Sou estudante Dev Web - Full Stack | <strong> <em>TRYBE</em> </strong> <br>
                     Aluno <strong>Trybe</strong> | <em>Turma 07 - Faca e Queijo !!</em> </p>
