--- a/index.html
+++ b/index.html
@@ -2,53 +2,73 @@
 <html>
 
 <head>
+    <!-- PADRONIZAÇÃO DA LINGUAGEM -->
     <meta charset="utf-8">
     <!-- TÍTULO DA PÁGINA -->
-    <title>MEU PRIMEIRO HTML</title>
-    <link rel="stylesheet" type="text/css" href="/meuPerfil.css">
+    <title> PORTFÓLIO WEB </title>
+    <!-- CSS EXTERNO -->
+    <link rel="stylesheet" type="text/css" href="/ANDREHORMAN1994.github.io/meuPerfil.css">
 </head>
 <!-- MEU CSS TERMINA DENTRO DA MINHA HEAD, POIS FAZ PARTE DAS MINHAS CONFIGURAÇÕES -->
 
 <body>
     <!-- CORPO DA MINHA PÁGINA, CONTÉM HTML E JS -->
-    <div id="meucorpohtml">
-        <h1 id="topo">TRYBE</h1>
+    <div class="meucorpohtml">
+        <!-- div referente todo o body, remover overflow eixo X -->
+
+        <div class="head">
+
+            <a href="" class="botao1"> MINHAS SKILLS </a>
+
+            <h1 class="topo">TRYBE</h1>
+
+        </div>
+
+        <div class="subtitulo-portfolio">
+            <h3> MEU PORTFÓLIO WEB </h3>
+        </div>
 
         <div class="grupo1">
-            <h3> MEU PORTFÓLIO WEB </h3>
 
-            <a href="#obs" id="botao1"> MINHAS SKILLS </a>
+            <div class="caixa-apresentacao1">
 
-            <img src="/assets/EU.jpg" alt="Este sou eu"> 
-           <a href="/assets/EU.jpg"> <span id="legenda">"Ampliar Imagem Aqui"</span> </a>
+                <span class="quemsoueu">
+                    <h1> QUEM SOU EU? </h1>
+                </span>
 
-            <span id="quemsoueu">
-                <h1> QUEM SOU EU? </h1>
-            </span>
-
-            <span class="apresentacao-inicial">
-                <div class="hello">
-                    <p> <em> Hello_World!! </em>
-                </div>
-
-                <em>Meu nome é <strong>André Horman de Medeiros Correia</strong></em>, tenho 25 anos, graduado em
-                ciências contábeis, itabaianense, atualmente morando em <strong>João Pessoa-PB</strong>. <br>
-                Vivo de nerdices, alto consumidor da indústria do <strong><em>Cinema, Animes, Livros e
-                        Quadrinhos</em></strong>, são meus vícios. E agora ganhei mais uma paixão,
-                <strong>"Programar"</strong>, decidi me reinventar e buscar uma nova área de atuação, o que me levou
-                finalmente a encontrar a <strong>TRYBE!</strong>
+                <span id="hello">
+                     <em> Hello_World!! </em>
+                    
+                </span>
+                <br>
+                <p>
+                    <em>Meu nome é <strong>André Horman de Medeiros Correia</strong></em>, tenho 25 anos, graduado em
+                    ciências contábeis, itabaianense, atualmente morando em <strong>João Pessoa-PB</strong>. <br>
+                    Vivo de nerdices, alto consumidor da indústria do <strong><em>Cinema, Animes, Livros e
+                            Quadrinhos</em></strong>, são meus vícios. E agora ganhei mais uma paixão,
+                    <strong>"Programar"</strong>, decidi me reinventar e buscar uma nova área de atuação, o que me levou
+                    finalmente a encontrar a <strong>TRYBE!</strong>
+                </p>
 
                 <div class="estudante-dev">Sou estudante Dev Web - Full Stack | <strong> <em>TRYBE</em> </strong> <br>
-                    Aluno <strong>Trybe</strong> | <em>Turma 07 - Faca e Queijo !!</em> </p>
+                    Aluno <strong>Trybe</strong> | <em>Turma 07 - Faca e Queijo !!</em>
+
                 </div>
 
-                </p>
-            </span>
+            </div>
+
+            <div class="caixa-apresentacao2">
+                <img src="/ANDREHORMAN1994.github.io/assets/EU.jpg" alt="Este sou eu" width="100px">
+                <br>
+                <a href="/assets/EU.jpg"> <span class="legenda">"Ampliar Imagem Aqui"</span> </a>
+
+            </div>
+
         </div>
 
         <h1 class="redes"> REDES SOCIAIS </h1>
 
-        <a class="meus-links-redes" id="github" target="_blank" href="https://github.com/ANDREHORMAN1994"> ACESSE MEU
+        <a class="meus-links-redes" class="github" target="_blank" href="https://github.com/ANDREHORMAN1994"> ACESSE MEU
             GITHUB
         </a>
 
@@ -60,7 +80,7 @@
 
             <div class="componentes">
                 <h2>
-                    <spam id="hard-skills"> HARD SKILLS </spam>
+                    <spam class="hard-skills"> HARD SKILLS </spam>
                 </h2>
                 <ul class="lista"> <strong>
                         <li> INGLÊS INTERMEDIÁRIO; </li>
@@ -83,7 +103,7 @@
             </div>
 
             <div class="observacoes-importantes">
-                <h2 id="obs"> <span id="soft-skills"> SOFT SKILLS </span></h2>
+                <h2 class="obs"> <span class="soft-skills"> SOFT SKILLS </span></h2>
                 <ol class="lista"> <strong>
                         <li> CAPACIDADE DE APRENDIZADO, APRENDER A APRENDER </li>
                         <li> MANTER CALMA EM MOMENTOS DE CONFLITOS </li>
@@ -101,10 +121,10 @@
 
         </div>
         <h4 class="referencia"> <em>“Código limpo é aquele escrito por alguém que se preocupa”</em> <span
-                id="citacao-autor">- Michael Feathers</span> </h4>
+                class="citacao-autor">- Michael Feathers</span> </h4>
 
-        <div >
-            <h3> <a href="#topo" id="botao2">VOLTAR AO TOPO</a> </h3>
+        <div>
+            <h3> <a href="#botao-topo" class="botao2">VOLTAR AO TOPO</a> </h3>
         </div>
 
     </div>
