--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <!-- TÍTULO DA PÁGINA -->
     <title>MEU PRIMEIRO HTML</title>
-    <link rel="stylesheet" type="text/css" href="/meuPerfil.css">
+    <link rel="stylesheet" type="text/css" href="/ANDREHORMAN1994.github.io/meuPerfil.css">
 </head>
 <!-- MEU CSS TERMINA DENTRO DA MINHA HEAD, POIS FAZ PARTE DAS MINHAS CONFIGURAÇÕES -->
 
@@ -19,7 +19,7 @@
 
             <a href="#obs" id="botao1"> MINHAS SKILLS </a>
 
-            <img src="/assets/EU.jpg" alt="Este sou eu"> 
+            <img src="/ANDREHORMAN1994.github.io/assets/EU.jpg" alt="Este sou eu"> 
            <a href="/assets/EU.jpg"> <span id="legenda">"Ampliar Imagem Aqui"</span> </a>
 
             <span id="quemsoueu">
