Meu PortFólio Atualizado, Elementos InLine e criação de Divs - 26/08

--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     <!-- CORPO DA MINHA PÁGINA, CONTÉM HTML E JS -->
     <div class="meucorpohtml">
         <!-- div referente todo o body, remover overflow eixo X -->
+<span id="botao-topo"></span>
 
         <div class="head">
 
-            <a href="" class="botao1"> MINHAS SKILLS </a>
+            <a href="#skills-aqui" class="botao1"> MINHAS SKILLS </a>
 
-            <h1 class="topo">TRYBE</h1>
+            <h1>TRYBE</h1>
 
         </div>
 
         <div class="subtitulo-portfolio">
-            <h3> MEU PORTFÓLIO WEB </h3>
+            <h3> MEU <span>PORTFÓLIO WEB </h3>
         </div>
 
         <div class="grupo1">
@@ -33,14 +34,14 @@
             <div class="caixa-apresentacao1">
 
                 <span class="quemsoueu">
-                    <h1> QUEM SOU EU? </h1>
+                    <h1>QUEM SOU EU?</h1>
                 </span>
 
                 <span id="hello">
-                     <em> Hello_World!! </em>
-                    
+                    <em> Hello_World!! </em>
                 </span>
                 <br>
+
                 <p>
                     <em>Meu nome é <strong>André Horman de Medeiros Correia</strong></em>, tenho 25 anos, graduado em
                     ciências contábeis, itabaianense, atualmente morando em <strong>João Pessoa-PB</strong>. <br>
@@ -50,38 +51,54 @@
                     finalmente a encontrar a <strong>TRYBE!</strong>
                 </p>
 
-                <div class="estudante-dev">Sou estudante Dev Web - Full Stack | <strong> <em>TRYBE</em> </strong> <br>
-                    Aluno <strong>Trybe</strong> | <em>Turma 07 - Faca e Queijo !!</em>
-
+                <div class="estudante-dev">
+                    Sou estudante Dev Web - Full Stack | <strong> <em>TRYBE</em> </strong> <br>
+                    Aluno <strong>Trybe</strong> | <em>Turma 07 - Faca e Queijo!!</em>
                 </div>
 
             </div>
 
             <div class="caixa-apresentacao2">
+
                 <img src="/ANDREHORMAN1994.github.io/assets/EU.jpg" alt="Este sou eu" width="100px">
                 <br>
-                <a href="/assets/EU.jpg"> <span class="legenda">"Ampliar Imagem Aqui"</span> </a>
+                <a href="/ANDREHORMAN1994.github.io/assets/EU.jpg"> <span class="legenda">"Ampliar Imagem Aqui"</span> </a>
 
+                <span id="skills-aqui"> </span>
             </div>
 
         </div>
 
-        <h1 class="redes"> REDES SOCIAIS </h1>
+        <h1 id="redes"> REDES SOCIAIS </h1>
 
-        <a class="meus-links-redes" class="github" target="_blank" href="https://github.com/ANDREHORMAN1994"> ACESSE MEU
-            GITHUB
-        </a>
+        <div class="season-redes">
 
-        <a class="meus-links-redes2" target="_blank" href="https://www.linkedin.com/in/andrehorman/"> ACESSE MEU
-            LINKEDIN
-        </a>
+            <div class="meus-links-redes1">
+
+                <a class="github" target="_blank" href="https://github.com/ANDREHORMAN1994">
+                    ACESSE MEU GITHUB
+                </a>
+            </div>
+
+            <div class="meus-links-redes2">
+
+                <a class="linkedin" target="_blank" href="https://www.linkedin.com/in/andrehorman/"> 
+                    ACESSE MEU LINKEDIN
+                </a>
+            </div>
+
+        </div>
 
         <div class="grupo3">
 
-            <div class="componentes">
-                <h2>
-                    <spam class="hard-skills"> HARD SKILLS </spam>
-                </h2>
+            <div class="componentes1">
+
+                <div class="hard-skills">
+                    <h2>
+                        HARD SKILLS
+                    </h2>
+                </div>
+
                 <ul class="lista"> <strong>
                         <li> INGLÊS INTERMEDIÁRIO; </li>
                         <li> ESPANHOL BÁSICO; </li>
@@ -102,8 +119,14 @@
                 </ul>
             </div>
 
-            <div class="observacoes-importantes">
-                <h2 class="obs"> <span class="soft-skills"> SOFT SKILLS </span></h2>
+            <div class="componentes2">
+
+                <div class="soft-skills">
+                    <h2 class="obs">
+                        SOFT SKILLS
+                    </h2>
+                </div>
+
                 <ol class="lista"> <strong>
                         <li> CAPACIDADE DE APRENDIZADO, APRENDER A APRENDER </li>
                         <li> MANTER CALMA EM MOMENTOS DE CONFLITOS </li>
@@ -120,11 +143,13 @@
             </div>
 
         </div>
-        <h4 class="referencia"> <em>“Código limpo é aquele escrito por alguém que se preocupa”</em> <span
-                class="citacao-autor">- Michael Feathers</span> </h4>
 
-        <div>
-            <h3> <a href="#botao-topo" class="botao2">VOLTAR AO TOPO</a> </h3>
+        <h4 class="referencia"> <em>“Código limpo é aquele escrito por alguém que se preocupa”</em> 
+            
+            <span class="citacao-autor">- Michael Feathers</span> </h4>
+
+        <div class="botao2">
+            <h3> <a href="#botao-topo" >VOLTAR AO TOPO</a> </h3>
         </div>
 
     </div>
