--- a/projeto-3.5/index.html
+++ b/projeto-3.5/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PROJETO TRYBE - 3.5</title>
-    <link rel="stylesheet" type="text/css" href="/ANDREHORMAN1994.github.io/projeto-3.5/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
@@ -18,7 +18,7 @@
 
     <section class="apresentacao">
       <div class="meu_perfil2">
-        <a target="_blank" href="/ANDREHORMAN1994.github.io/portólio/portfolio.html">
+        <a target="_blank" href="/ANDREHORMAN1994.github.io/index.html">
           <img
             src="/Turma07-Projetos/assets/EU.jpg"
             alt="Foto de André Horman"
@@ -29,7 +29,7 @@
         <a
           class="portfolio"
           target="_blank"
-          href="/ANDREHORMAN1994.github.io/portólio/portfolio.html"
+          href="/ANDREHORMAN1994.github.io/index.html"
         >
           <strong>Portfólio Pessoal</strong>
         </a>
