--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PROJETO TRYBE - 3.5</title>
-    <link rel="stylesheet" type="text/css" href="/ANDREHORMAN1994.github.io/projeto-3.5/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
@@ -46,9 +46,9 @@
             <em>
               <p>
                 "O sentimento de empolgação descreve bem como tem sido esse
-                primeiro mês de estudo na Trybe. Cada dia tem sido um desafiado
+                primeiro mês de estudo na Trybe. Cada dia tem sido um desafio
                 diferente, mas o sentimento de aprendizado recompensa todo o
-                esforço investido. Esse projeto é o resultado disso."
+                esforço investido."
               </p>
             </em>
           </aside>
@@ -136,7 +136,8 @@
             <tr>
               <td>Linkedin</td>
               <td>
-                <a class="tabela-link"
+                <a
+                  class="tabela-link"
                   target="_blank"
                   href="https://www.linkedin.com/in/andrehorman"
                   >Acesse Aqui</a
@@ -146,7 +147,10 @@
             <tr>
               <td>GitHub</td>
               <td>
-                <a class="tabela-link" target="_blank" href="https://github.com/ANDREHORMAN1994"
+                <a
+                  class="tabela-link"
+                  target="_blank"
+                  href="https://github.com/ANDREHORMAN1994"
                   >Acesse Aqui</a
                 >
               </td>
