--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <!-- TÍTULO DA PÁGINA -->
     <title> PORTFÓLIO WEB </title>
     <!-- CSS EXTERNO -->
-    <link rel="stylesheet" type="text/css" href="/ANDREHORMAN1994.github.io/portólio/meuPerfil.css">
+    <link rel="stylesheet" type="text/css" href="/ANDREHORMAN1994.github.io/meuPerfil.css">
 </head>
 <!-- MEU CSS TERMINA DENTRO DA MINHA HEAD, POIS FAZ PARTE DAS MINHAS CONFIGURAÇÕES -->
 
@@ -60,9 +60,9 @@
 
             <div class="caixa-apresentacao2">
 
-                <img src="/ANDREHORMAN1994.github.io/portólio/assets/EU.jpg" alt="Este sou eu" width="100px">
+                <img src="/ANDREHORMAN1994.github.io/assets/EU.jpg" alt="Este sou eu" width="100px">
                 <br>
-                <a href="/ANDREHORMAN1994.github.io/portólio/assets/EU.jpg"> <span class="legenda">"Ampliar Imagem Aqui"</span>
+                <a href="/ANDREHORMAN1994.github.io/assets/EU.jpg"> <span class="legenda">"Ampliar Imagem Aqui"</span>
                 </a>
 
             </div>
