--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="subtitulo-portfolio">
-            <h3> MEU <span>PORTFÓLIO WEB </h3>
+            <h2> MEU <span>PORTFÓLIO WEB </h2>
         </div>
 
         <div class="grupo1">
@@ -132,8 +132,8 @@
                 </div>
 
                 <ol class="lista"> <strong>
-                        <li> CAPACIDADE DE APRENDIZADO, APRENDER A APRENDER </li>
-                        <li> MANTER CALMA EM MOMENTOS DE CONFLITOS </li>
+                        <li> CAPACIDADE DE APRENDIZADO,<br>APRENDER A APRENDER </li>
+                        <li> CALMA EM MOMENTOS DE CONFLITOS </li>
                         <li> CAPACIDADE PARA PESQUISAR </li>
                         <li> SOLUCIONAR PROBLEMAS </li>
                         <li> CAPACIDADE DE GERENCIAR MINHAS OBRIGAÇÕES </li>
@@ -152,8 +152,8 @@
 
             <span class="citacao-autor">- Michael Feathers</span> </h4>
 
-        <div class="botao2">
-            <h3> <a href="#botao-topo">VOLTAR AO TOPO</a> </h3>
+        <div>
+          <h2><a class="botao2" href="#botao-topo">VOLTAR AO TOPO</a></h2>
         </div>
 
     </div>
