--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
             <div class="componentes1">
 
                 <div class="hard-skills">
-                    <h2>
+                    <h2 class="hard">
                         HARD SKILLS
                     </h2>
                 </div>
 
-                <ul class="lista"> <strong>
+                <ol class="lista1"> <strong>
                         <li> INGLÊS INTERMEDIÁRIO; </li>
                         <li> ESPANHOL BÁSICO; </li>
                         <li> GIT E GITHUB; </li>
@@ -120,18 +120,18 @@
                         <li> PACOTE OFFICE; </li>
                         <li> WINDOWS; </li>
                     </strong>
-                </ul>
+                </ol>
             </div>
 
             <div class="componentes2">
 
                 <div class="soft-skills">
-                    <h2 class="obs">
+                    <h2 class="soft">
                         SOFT SKILLS
                     </h2>
                 </div>
 
-                <ol class="lista"> <strong>
+                <ol class="lista2"> <strong>
                         <li> CAPACIDADE DE APRENDIZADO,<br>APRENDER A APRENDER </li>
                         <li> CALMA EM MOMENTOS DE CONFLITOS </li>
                         <li> CAPACIDADE PARA PESQUISAR </li>
