--- a/index.html
+++ b/index.html
@@ -1,163 +1,13 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="pt-br">
 <head>
-    <!-- PADRONIZAÇÃO DA LINGUAGEM -->
-    <meta charset="utf-8">
-    <!-- TÍTULO DA PÁGINA -->
-    <title> PORTFÓLIO WEB </title>
-    <!-- CSS EXTERNO -->
-    <link rel="stylesheet" type="text/css" href="/ANDREHORMAN1994.github.io/meuPerfil.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PORTFOLIO WEB</title>
 </head>
-<!-- MEU CSS TERMINA DENTRO DA MINHA HEAD, POIS FAZ PARTE DAS MINHAS CONFIGURAÇÕES -->
-
 <body>
-    <!-- CORPO DA MINHA PÁGINA, CONTÉM HTML E JS -->
-    <div class="meucorpohtml">
-        <!-- div referente todo o body, remover overflow eixo X -->
-        <span id="botao-topo"></span>
-
-        <div class="head">
-
-            <a href="#skills-aqui" class="botao1"> MINHAS SKILLS </a>
-
-            <h1>TRYBE</h1>
-
-        </div>
-
-        <div class="subtitulo-portfolio">
-            <h2> MEU <span>PORTFÓLIO WEB </h2>
-        </div>
-
-        <div class="grupo1">
-
-            <div class="caixa-apresentacao1">
-
-                <span class="quemsoueu">
-                    <h1>QUEM SOU EU?</h1>
-                </span>
-
-                <span id="hello">
-                    <em> Hello_World!! </em>
-                </span>
-                <br>
-
-                <p>
-                    <em>Meu nome é <strong>André Horman de Medeiros Correia</strong></em>, tenho 25 anos, graduado em
-                    ciências contábeis, itabaianense, atualmente morando em <strong>João Pessoa-PB</strong>. <br>
-                    Vivo de nerdices, alto consumidor da indústria do <strong><em>Cinema, Animes, Livros e
-                            Quadrinhos</em></strong>, são meus vícios. E agora ganhei mais uma paixão,
-                    <strong>"Programar"</strong>, decidi me reinventar e buscar uma nova área de atuação, o que me levou
-                    finalmente a encontrar a <strong>TRYBE!</strong>
-                </p>
-
-                <div class="estudante-dev">
-                    Sou estudante Dev Web - Full Stack | <strong> <em>TRYBE</em> </strong> <br>
-                    Aluno <strong>Trybe</strong> | <em>Turma 07 - Faca e Queijo!!</em>
-                </div>
-
-            </div>
-
-            <div class="caixa-apresentacao2">
-
-                <img src="/ANDREHORMAN1994.github.io/assets/EU.jpg" alt="Este sou eu" width="100px">
-                <br>
-                <a href="/ANDREHORMAN1994.github.io/assets/EU.jpg"> <span class="legenda">"Ampliar Imagem Aqui"</span>
-                </a>
-
-            </div>
-
-        </div>
-
-        
-
-        <h1 id="redes"> REDES SOCIAIS </h1>
-
-        <div class="season-redes">
-
-            <div class="meus-links-redes1">
-
-                <a class="github" target="_blank" href="https://github.com/ANDREHORMAN1994">
-                    ACESSE MEU GITHUB
-                </a>
-            </div>
-
-            <div class="meus-links-redes2">
-
-                <a class="linkedin" target="_blank" href="https://www.linkedin.com/in/andrehorman/">
-                    ACESSE MEU LINKEDIN
-                </a>
-            </div>
-            
-            <span id="skills-aqui"> </span>
-
-        </div>
-
-        <div class="grupo3">
-
-            <div class="componentes1">
-
-                <div class="hard-skills">
-                    <h2 class="hard">
-                        HARD SKILLS
-                    </h2>
-                </div>
-
-                <ol class="lista1"> <strong>
-                        <li> INGLÊS INTERMEDIÁRIO; </li>
-                        <li> ESPANHOL BÁSICO; </li>
-                        <li> GIT E GITHUB; </li>
-                        <li> HTML; </li>
-                        <li> CSS; </li>
-                        <li> JAVASCRIPT;</li>
-                        <li> UNIX E SHELL; </li>
-                        <li> SHELLSCRIPT; </li>
-                        <li> POTOSHOP; </li>
-                        <li> ILLUSTRATOR; </li>
-                        <li> INDESIGN; </li>
-                        <li> PREMIERE; </li>
-                        <li> AFTER EFFECTS; </li>
-                        <li> PACOTE OFFICE; </li>
-                        <li> WINDOWS; </li>
-                    </strong>
-                </ol>
-            </div>
-
-            <div class="componentes2">
-
-                <div class="soft-skills">
-                    <h2 class="soft">
-                        SOFT SKILLS
-                    </h2>
-                </div>
-
-                <ol class="lista2"> <strong>
-                        <li> CAPACIDADE DE APRENDIZADO,<br>APRENDER A APRENDER </li>
-                        <li> CALMA EM MOMENTOS DE CONFLITOS </li>
-                        <li> CAPACIDADE PARA PESQUISAR </li>
-                        <li> SOLUCIONAR PROBLEMAS </li>
-                        <li> CAPACIDADE DE GERENCIAR MINHAS OBRIGAÇÕES </li>
-                        <li> CAPACIDADE DE ORGANIZAÇÃO </li>
-                        <li> BOA COMUNICAÇÃO E TRANSPARÊNCIA </li>
-                        <li> TRABALHAR EM EQUIPE </li>
-                        <li> COLABORAÇÃO SOCIAL </li>
-                        <li> DÁ FEEDBACKS </li>
-                    </strong>
-                </ol>
-            </div>
-
-        </div>
-
-        <h4 class="referencia"> <em>“Código limpo é aquele escrito por alguém que se preocupa”</em>
-
-            <span class="citacao-autor">- Michael Feathers</span> </h4>
-
-        <div>
-          <h2><a class="botao2" href="#botao-topo">VOLTAR AO TOPO</a></h2>
-        </div>
-
-    </div>
-
+  <header>
+    <h1></h1>
+  </header>
 </body>
-
 </html>
