projeto pixel art finalizado - 28/09/2020

--- a/PROJETOS/Projeto5.5_Pixel-Art/index.html
+++ b/PROJETOS/Projeto5.5_Pixel-Art/index.html
@@ -61,7 +61,7 @@
     </main>
     
     <footer class="footer-container">
-      <h2>Criado por André Horman</h2>
+      <h2>Desenvolvido por André Horman</h2>
       <p>Todos os direitos Reservados</p>
     </footer>
 
