--- a/TRYBE-PROJETOS/Projeto5.5-Meme-Generator/index.html
+++ b/TRYBE-PROJETOS/Projeto5.5-Meme-Generator/index.html
@@ -6,20 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MEME GENERATOR</title>
   <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./mobile.css">
 </head>
 
 <body>
   <header id="container-title" class="container-title">
     <div class="head-title-container">
-      <span class="p-meme-span1">a</span>
-      <h1 class="title">PROJETO TRYBE</h1>
-      <span class="meme-span"> | MEME GENERATOR</span>
-      <span class="p-meme-span2">c</span>
+
+      <div class="head-title-subcontainer">
+        <span class="p-meme-span1 meme-face">a</span>
+        <h1 class="title title-elements">PROJETO TRYBE</h1>
+      </div>
+
+      <div class="head-title-subcontainer">
+        <span class="meme-span title-elements"> | MEME GENERATOR</span>
+        <span class="p-meme-span2 meme-face">c</span>
+      </div>
+
     </div>
 
     <div class="head-p-container">
       <!-- <p class="p-meme">Crie seus próprios Memes e Personalize!</p> -->
       <form class="files">
+
         <div class="fileSection">
           <strong class="filesItems">TEXTO:</strong>
           <input type="text" class="filesItems text-input" id="text-input" maxlength="60"
@@ -29,6 +38,7 @@
           <strong class="filesItems">FOTO:</strong>
           <input type="file" class="filesItems meme-insert" id="meme-insert" />
         </div>
+
       </form>
     </div>
   </header>
@@ -62,11 +72,15 @@
       </section>
 
       <section class="meme-subcontainer miniature">
-        <p class="p-miniature">"Escolha uma Imagem própria ou algum dos memes abaixo pré-selecionados"</p>
-        <img id="meme-1" class="miniatureImg" src="./imgs/meme1.png" alt="meme1" />
-        <img id="meme-2" class="miniatureImg" src="./imgs/meme2.png" alt="meme2" />
-        <img id="meme-3" class="miniatureImg" src="./imgs/meme3.png" alt="meme3" />
-        <img id="meme-4" class="miniatureImg" src="./imgs/meme4.png" alt="meme4" />
+        <div class="p-miniature-container">
+          <p class="p-miniature">"Escolha uma Imagem própria ou algum dos memes abaixo pré-selecionados"</p>
+        </div>
+        <div class="img-miniature-container">
+          <img id="meme-1" class="miniatureImg" src="./imgs/meme1.png" alt="meme1" />
+          <img id="meme-2" class="miniatureImg" src="./imgs/meme2.png" alt="meme2" />
+          <img id="meme-3" class="miniatureImg" src="./imgs/meme3.png" alt="meme3" />
+          <img id="meme-4" class="miniatureImg" src="./imgs/meme4.png" alt="meme4" />
+        </div>
       </section>
     </section>
   </main>
