Finalizando script.js - Casa de Cambio - 24/10/2020

--- a/TRYBE-PROJETOS/Projeto9.3_Casa-de-Cambio/index.html
+++ b/TRYBE-PROJETOS/Projeto9.3_Casa-de-Cambio/index.html
@@ -17,6 +17,7 @@
       <input type="text" id="coin" placeholder="Exemplo: BRL">
     </div>
     <button type="button" class="button-search">Pesquisar</button>
+    <button type="button" class="clear-button">Limpar</button>
     <section class="api-container"></section>
   </main>
   <script src="./script.js"></script>
